# PulsarMM

./: .gitignore  NOTICE.md  README.md  UPSTREAM_NOTES.md  flake.nix  index.html  mod_warnings.json  package-lock.json  package.json  shell.nix  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/locales/: en.json  pt.json
src-tauri/src/: fs_ops.rs  fs_ops_tests.rs  game_launch.rs  game_launch_ops.rs  game_launch_ops_tests.rs  game_launch_tests.rs  installation_detection.rs  installation_detection_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  models.rs  path_ops.rs  path_ops_tests.rs  settings_paths.rs  settings_paths_tests.rs  staging_contents.rs  staging_contents_tests.rs  xml_format.rs  xml_format_tests.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/app/: bootstrap.rs  bootstrap_tests.rs  commands.rs  commands_tests.rs  detection.rs  detection_tests.rs  entry.rs  entry_tests.rs  http.rs  http_tests.rs  icon.rs  icon_tests.rs  linux.rs  linux_tests.rs  migration.rs  migration_tests.rs  mod.rs  ops.rs  ops_tests.rs  paths.rs  paths_tests.rs  single_instance.rs  single_instance_tests.rs
src-tauri/src/linux/: env.rs  env_tests.rs  game_paths.rs  game_paths_tests.rs  launch_strategy.rs  launch_strategy_tests.rs  mod.rs  paths.rs  paths_tests.rs  runtime.rs
src-tauri/src/nexus/: mod.rs  (+6 more)
src-tauri/tests/: integration_game_detection.rs  integration_install_command_flow.rs  integration_install_pipeline.rs  integration_mod_archive.rs  integration_mod_command_flow.rs  integration_nexus_command_ops.rs  integration_profile_pipeline.rs
(+193 files in other folders)
